add_library(${RAPIDXML_NAME} INTERFACE)

target_include_directories(${RAPIDXML_NAME} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/rapidxml-1.13>
)

# Installation properties.
install(TARGETS ${RAPIDXML_NAME} EXPORT ${ORE_PACKAGE_NAME}Targets)

install(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h"
)
