AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir} -I${top_builddir}/../QuantExt

noinst_LTLIBRARIES = libOREDataMarketData.la

libOREDataMarketData_la_LDFLAGS = -release $(PACKAGE_VERSION)

libOREDataMarketData_la_LIBADD =

libOREDataMarketData_la_SOURCES = \
	capfloorvolcurve.cpp \
    cdsvolcurve.cpp \
	csvloader.cpp \
	curveloader.cpp \
	curvespec.cpp \
	curvespecparser.cpp \
	defaultcurve.cpp \
	basecorrelationcurve.cpp \
	equitycurve.cpp \
	equityvolcurve.cpp \
	fixings.cpp \
	fxspot.cpp \
	fxtriangulation.cpp \
	fxvolcurve.cpp \
    inflationcapfloorpricesurface.cpp \
    inflationcurve.cpp \
	market.cpp \
	marketdatum.cpp \
	marketdatumparser.cpp \
	marketimpl.cpp \
	inmemoryloader.cpp \
	swaptionvolcurve.cpp \
	security.cpp \
	todaysmarket.cpp \
	todaysmarketparameters.cpp \
	yieldcurve.cpp \
	commoditycurve.cpp \
	commodityvolcurve.cpp \
	inflationcapfloorvolcurve.cpp

this_includedir=${includedir}/${subdir}
this_include_HEADERS = \
	all.hpp \
	capfloorvolcurve.hpp \
    cdsvolcurve.hpp \
	csvloader.hpp \
	curveloader.hpp \
	curvespec.hpp \
	curvespecparser.hpp \
	defaultcurve.hpp \
	basecorrelationcurve.hpp \
	equitycurve.hpp \
	equityvolcurve.hpp \
	fixings.hpp \
	fxspot.hpp \
	fxtriangulation.hpp \
	fxvolcurve.hpp \
    inflationcapfloorpricesurface.hpp \
    inflationcurve.hpp \
	loader.hpp \
	market.hpp \
	marketdatum.hpp \
	marketdatumparser.hpp \
	marketimpl.hpp \
	inmemoryloader.hpp \
	swaptionvolcurve.hpp \
	security.hpp \
	todaysmarket.hpp \
	todaysmarketparameters.hpp \
	yieldcurve.hpp \
	commoditycurve.hpp \
	commodityvolcurve.hpp \
	inflationcapfloorvolcurve.hpp

all.hpp: Makefile.am
	echo "/* This file is automatically generated; do not edit.     */" > $@
	echo "/* Add the files to be included into Makefile.am instead. */" >> $@
	echo >> $@
	for i in $(filter-out all.hpp, $(this_include_HEADERS)); do \
		echo "#include <${subdir}/$$i>" >> $@; \
	done
	echo >> $@
	subdirs='$(SUBDIRS)'; for i in $$subdirs; do \
		echo "#include <${subdir}/$$i/all.hpp>" >> $@; \
	done
