
SUBDIRS = builders

AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir} -I${top_builddir}/../QuantExt -I${top_builddir}/../QuantExtPlus

noinst_LTLIBRARIES = libOREDataPortfolio.la

libOREDataPortfolio_la_LDFLAGS = -release $(PACKAGE_VERSION)

libOREDataPortfolio_la_LIBADD = builders/libOREDataPortfolioBuilders.la

libOREDataPortfolio_la_SOURCES = \
	enginefactory.cpp \
	envelope.cpp \
	equityforward.cpp \
	equityoption.cpp \
	fxforward.cpp \
	fxoption.cpp \
	fxswap.cpp \
	legdata.cpp \
	optiondata.cpp \
	portfolio.cpp \
	schedule.cpp \
	swap.cpp \
	swaption.cpp \
	trade.cpp \
	tradeactions.cpp \
	tradefactory.cpp \
	optionwrapper.cpp \
	enginedata.cpp \
	nettingsetdefinition.cpp \
	nettingsetmanager.cpp \
	capfloor.cpp \
	bond.cpp \
	creditdefaultswap.cpp \
	creditdefaultswapdata.cpp \
	forwardrateagreement.cpp \
	legbuilders.cpp

this_includedir=${includedir}/${subdir}
this_include_HEADERS = \
	all.hpp \
	enginefactory.hpp \
	envelope.hpp \
	equityforward.hpp \
	equityoption.hpp \
	fxforward.hpp \
	fxoption.hpp \
	fxswap.hpp \
	legdata.hpp \
	optiondata.hpp \
	portfolio.hpp \
	schedule.hpp \
	swap.hpp \
	swaption.hpp \
	trade.hpp \
	tradeactions.hpp \
	tradefactory.hpp \
	instrumentwrapper.hpp \
	optionwrapper.hpp \
	enginedata.hpp \
	nettingsetdefinition.hpp \
	nettingsetmanager.hpp \
	capfloor.hpp \
	bond.hpp \
	creditdefaultswap.hpp \
	creditdefaultswapdata.hpp \
	forwardrateagreement.hpp \
	legbuilders.hpp

all.hpp: Makefile.am
	echo "/* This file is automatically generated; do not edit.     */" > $@
	echo "/* Add the files to be included into Makefile.am instead. */" >> $@
	echo >> $@
	for i in $(filter-out all.hpp, $(this_include_HEADERS)); do \
		echo "#include <${subdir}/$$i>" >> $@; \
	done
	echo >> $@
	subdirs='$(SUBDIRS)'; for i in $$subdirs; do \
		echo "#include <${subdir}/$$i/all.hpp>" >> $@; \
	done
